WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
32868
IWebView::mainFrame crashes if called after IWebView::close
https://bugs.webkit.org/show_bug.cgi?id=32868
Summary
IWebView::mainFrame crashes if called after IWebView::close
Adam Roben (:aroben)
Reported
2009-12-22 07:07:40 PST
To reproduce: 1. Create a WebView 2. Call IWebView::close 3. Call IWebView::mainFrame You'll crash.
Attachments
Patch
(2.81 KB, patch)
2016-07-21 04:25 PDT
,
Per Arne Vollan
bfulgham
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2009-12-22 07:07:52 PST
The problem is that IWebView::close deletes m_page, which ends up releasing the last reference to m_mainFrame, but we don't null-out m_mainFrame.
Adam Roben (:aroben)
Comment 2
2009-12-22 07:08:00 PST
<
rdar://problem/7472766
>
Per Arne Vollan
Comment 3
2016-07-21 04:25:45 PDT
Created
attachment 284205
[details]
Patch
Brent Fulgham
Comment 4
2016-07-21 10:26:37 PDT
Comment on
attachment 284205
[details]
Patch Excellent! r=me.
Per Arne Vollan
Comment 5
2016-07-21 11:33:03 PDT
(In reply to
comment #4
)
> Comment on
attachment 284205
[details]
> Patch > > Excellent! r=me.
Thanks for reviewing :)
Per Arne Vollan
Comment 6
2016-07-22 05:43:21 PDT
Committed
r203597
: <
https://trac.webkit.org/changeset/203597
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug