IWebView::mainFrame crashes if called after IWebView::close https://bugs.webkit.org/show_bug.cgi?id=32868

Reviewed by Brent Fulgham.

Source/WebKit/win:

After deleting the page in WebView::close the mainframe object may be deleted.

Test: Tools/TestWebKitAPI/Tests/WebKit/win/WebViewDestruction.cpp (CloseThenGetMainFrame).

* WebView.cpp:
(WebView::close): set mainframe pointer member to null.

Tools:

* TestWebKitAPI/Tests/WebKit/win/WebViewDestruction.cpp:
(TestWebKitAPI::TEST_F): Added test.


Canonical link: https://commits.webkit.org/178232@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203597 268f45cc-cd09-0410-ab3c-d52691b4dbfc